<resources>

    <!-- Common. -->
    <string name="app_name">Shoppurs</string>
    <string name="action_settings">Settings</string>
    <string name="url_shop">http://api.shoppurs.in:8085/ShoppursShopApp/api/</string>
    <string name="url_customer">http://api.shoppurs.in:8085/ShoppursCustomerApp</string>
    <string name="url_partner">http://api.shoppurs.in:8085/ShoppursPartnerApp</string>

    <string name="local_url">http://192.168.1.6:8888/api/customers</string>
    <string name="base_image_url">http://www.shoppurs.in/images</string>
    <string name="sign_up">Sign Up</string>
    <string name="image_root">http://api.shoppurs.in:8085/</string>

    <string name="google_maps_key">AIzaSyB-GKvcnqqzEBxT6OvmVPfNs7FBppblo-s</string>
    <string name="scandit_license_key">AUqNnwlEFwxTGIN5mAKlgV8h39u5OGnoKA0A4ZZelEYDEYri5ndBjv8cVx9NRsE10npJnexhvlMUWjjmTWV88VoayiMVTwJdniehkSN9nP/vN3Q2KCY4ke4ObsDiJkILZJM5XV5hztrPAKccFI4ribQdpnPraIdEwHTeHwm3Joz+gAFQrEeZ0nmRZp48izvjvjujJ+iGH6O5IBZhV6Zh2MZRrmvA9x2dUKJJRPiRNygSq5j1FhYAGe8uaJNFoz5VZYSmuThCBEaNtIWLKlYtYHAG8j2MODD8jQQsX52nGvlAGQcsNukJBka1E/jHBP7VVEJ5Yoo1f2jMxr0a5V7Q7Xzo76IJBKsbQqj9vS+9pwJyQemV01R3Tl46O4KlfM6eYZl8eBQxySL299qem0D7hUUJlX9jc7k7Cx5bgAfgtrQVlUuMVUdlE8ak4ydMcjAXNubA5ZQv1zPDa97uVQk0SBhxQ7nB+SMoWtdaB3WOcWHVj4GLJomqzaRDwVcHb45gE/m6u5zpUSlxx2AVcgr3XZat/Q9yHhpPCpky4Bz/wXQeHOGL/yfsrAHCQ2RxpI5LBUXjbEgmceXrp7fuVwkR8ZHy7Mn8NDsWkyIra8ynwPHb6lSRXV/bl8CO9ZEWZFCV8Db4RAj9kAZedD2Zx1ZK1N+WXsm6DqYzmUtjEhJ1Mq4oaXc/KM3pAynSSmjBVDf2xkYEKnpYehFjj1Z6Kl6FtUB8W+HYhtNupz5oUnvU4oGYwgpalRxFiLJu/BlzpOZl7uruoaIIBPQB7UaOJIU9smbR5F3CZM0r5zSblORYIQ==</string>

    <!-- Error. -->
    <string name="no_internet">Internet connection is not available.</string>
    <string name="connection_error">There is some problem in connecting server.</string>
    <string name="json_parser_error">Json parsing errror.</string>
    <string name="full_name_required">Please enter full name.</string>
    <string name="email_required">Please enter Email Id.</string>
    <string name="email_required_valid">Please enter Valid Email Id.</string>
    <string name="mobile_required">Please enter Mobile.</string>
    <string name="location_required">Please enter Location.</string>
    <string name="password_required">Please enter Password.</string>
    <string name="password_not_match">Password is not matching.</string>
    <string name="valid_email">Please enter valid Email ID.</string>
    <string name="valid_mobile">Please enter valid Mobile Number.</string>
    <string name="accept_terms">Please accept Terms and Conditions.</string>

    <!-- Login. -->
    <string name="email_phone">Email/Phone</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or_login_with">Or Login With</string>
    <string name="forgot_your_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'t Have an Account?</string>
    <string name="register_now">Register Now</string>

    <!-- Register. -->
    <string name="back">back</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="affilate_code">Affilate Code</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="conf_password">Confirm Password</string>
    <string name="term_condition">Agree With Terms &amp; Conditions</string>

    <!-- Home. -->
    <string name="today">Today</string>
    <string name="categories">Categories</string>
    <string name="stores_near_by">Stores Nearby</string>
    <string name="stores_near_by_icon">&#xf54e;</string>
    <string name="product_icon">&#xf291;</string>
    <string name="search">Search</string>
    <string name="products">Products</string>
    <string name="profile">Profile</string>
    <string name="instant_pay">I Pay</string>

    <!-- Settings. -->
    <string name="dark_mode">Dark Mode</string>
    <string name="my_account">Account</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="color_theme">Color Themes</string>


    <!-- Dialogs. -->
    <string name="logging_user">Logging User</string>
    <string name="creating_account">Creating Account</string>

    <!-- titles. -->
    <string name="title_activity_register">Register</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_setting">Settings</string>
    <string name="title_activity_offers">Offers</string>
    <string name="title_activity_products">ProductsActivity</string>
    <string name="title_activity_customer_list">Customer List</string>
    <string name="title_activity_sub_cat_list">Sub Category</string>
    <string name="title_activity_shop_address">Shop Address</string>
    <string name="title_activity_product_list">Product List</string>
    <string name="title_activity_shop_list">My Shops</string>
    <string name="title_activity_banner_details">Banner Details</string>
    <string name="title_activity_personalinfo">Personal Info</string>
    <string name="title_activity_changepasswordo">Change Password</string>
    <string name="title_activity_cart_shop">Cart Shops</string>
    <string name="title_activity_transaction">Transaction Details</string>
    <string name="title_activity_invoice">Invoice</string>
    <string name="title_activity_apply_offer">Apply Offer</string>
    <string name="title_activity_apply_coupons">Apply Coupon</string>
    <string name="title_activity_add_delivery__address">Add Delivery Address</string>
    <string name="title_activity_ccAvenue">CCAvenue</string>
    <string name="title_activity_payKhata">PayKhata</string>
    <string name="title_activity_delivery_address">DeliveryAddress</string>
    <string name="title_activity_display">Display</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_cart">My Cart</string>
    <string name="title_activity_order">My Orders</string>
    <string name="title_activity_order_details">Order Details</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="title_activity_users_chat">ChatActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_product_detail">Product Details</string>
    <string name="title_activity_stores_list">Store List</string>
    <string name="title_activity_customer_profile">Customer Profile</string>

    <string name="notifications_channel_name">notification</string>
    <string name="notifications_channel_description">noti</string>

    <string name="service_not_available">Service is not available</string>
    <string name="no_address_found">No locationAddress is found</string>
    <string name="no_location_data_provided">No data is provided</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude values</string>
    <string name="address_required">Please enter your address.</string>
    <string name="pincode_required">Please enter your pincode.</string>

    <string name="enter_mobile">Enter Mobile Number</string>
    <string name="call_icon">&#xe046;</string>
    <string name="key_icon">&#xe08c;</string>
    <string name="new_icon">&#xe060;</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_register">Sign Up Registration</string>
    <string name="agree">You agree with the Terms &amp; Conditions of Shoppurs </string>

    <string name="facebook_app_id">469783973585783</string>
    <string name="fb_login_protocol_scheme">fb469783973585783</string>


    <string name="common_error_message">Unable to establish connection to the server. Please retry again and if the problem still persists, please contact to Shoppurs technical support team for further assistance.</string>

    <string name="transition_dialog">transition_dialog</string>

    <string name="html" translatable="false">
        <![CDATA[
        <html>
            <head>
                <style type="text/css">
                    body {
                        font-size: %4$fpx;
                        color: #%2$s;
                        margin: %5$fpx %5$fpx %5$fpx %5$fpx;
                    }
                    a {color: #%3$s;}
                    img {display: inline; height: auto; max-width: 100%%;}
                    pre {white-space: pre-wrap;}
                    iframe {width: 90vw; height: 50.625vw;} /* 16:9 */
                </style>
            </head>
            <body>%1$s</body>
            </html>"
        ]]>
    </string>
    <string name="type_ur_message">Type your message</string>

</resources>
