<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_register"
    tools:context=".activities.RegisterActivity">

    <TextView
        android:id="@+id/text_header"
        android:textColor="?attr/secondaryTextColor"
        android:text="Customer"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/view_horizontal_margin"
        android:paddingRight="@dimen/view_horizontal_margin"
        android:textSize="@dimen/home_list_header_text_size"
        android:textAllCaps="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text_sub_header"
        android:layout_marginTop="@dimen/view_vertical_margin"
        android:paddingLeft="@dimen/view_horizontal_margin"
        android:paddingRight="@dimen/view_horizontal_margin"
        android:layout_below="@+id/text_header"
        android:textColor="?attr/primaryTextColor"
        android:text="Registration"
        android:textStyle="bold"
        android:textSize="@dimen/product_list_very_large_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_below="@+id/text_sub_header"
        android:layout_above="@+id/relative_footer_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_full_name"
            android:hint="@string/full_name"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:drawableTint="?attr/primaryTextColor"
            android:drawablePadding="@dimen/drawable_padding"
            android:inputType="textPersonName"
            android:imeOptions="actionNext"
            android:theme="@style/MySelectViewTheme"
            android:layout_marginTop="@dimen/register_container_margin_top"
            android:paddingBottom="@dimen/edit_text_vertical_padding"
            android:paddingTop="@dimen/edit_text_vertical_padding"
            android:paddingLeft="@dimen/edit_text_horizontal_padding"
            android:paddingRight="@dimen/edit_text_horizontal_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edit_email"
            android:hint="@string/email"
            android:layout_below="@+id/edit_full_name"
            android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
            android:drawableTint="?attr/primaryTextColor"
            android:drawablePadding="@dimen/drawable_padding"
            android:gravity="center_vertical"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:theme="@style/MySelectViewTheme"
            android:layout_marginTop="@dimen/register_view_margin_top"
            android:paddingBottom="@dimen/edit_text_vertical_padding"
            android:paddingTop="@dimen/edit_text_vertical_padding"
            android:paddingLeft="@dimen/edit_text_horizontal_padding"
            android:paddingRight="@dimen/edit_text_horizontal_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edit_mobile"
            android:hint="@string/mobile"
            android:layout_below="@+id/edit_email"
            android:drawableLeft="@drawable/ic_phone_black_24dp"
            android:drawableTint="?attr/primaryTextColor"
            android:drawablePadding="@dimen/drawable_padding"
            android:gravity="center_vertical"
            android:inputType="phone"
            android:imeOptions="actionNext"
            android:theme="@style/MySelectViewTheme"
            android:layout_marginTop="@dimen/register_view_margin_top"
            android:paddingBottom="@dimen/edit_text_vertical_padding"
            android:paddingTop="@dimen/edit_text_vertical_padding"
            android:paddingLeft="@dimen/edit_text_horizontal_padding"
            android:paddingRight="@dimen/edit_text_horizontal_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <EditText
            android:id="@+id/edit_password"
            android:hint="@string/password"
            android:layout_below="@+id/edit_mobile"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:drawableTint="?attr/primaryTextColor"
            android:drawablePadding="@dimen/drawable_padding"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            android:theme="@style/MySelectViewTheme"
            android:paddingBottom="@dimen/edit_text_vertical_padding"
            android:paddingTop="@dimen/edit_text_vertical_padding"
            android:paddingLeft="@dimen/edit_text_horizontal_padding"
            android:paddingRight="@dimen/edit_text_horizontal_padding"
            android:layout_marginTop="@dimen/register_view_margin_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edit_conf_password"
            android:hint="@string/conf_password"
            android:layout_below="@+id/edit_password"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:drawableTint="?attr/primaryTextColor"
            android:drawablePadding="@dimen/drawable_padding"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:theme="@style/MySelectViewTheme"
            android:paddingBottom="@dimen/edit_text_vertical_padding"
            android:paddingTop="@dimen/edit_text_vertical_padding"
            android:paddingLeft="@dimen/edit_text_horizontal_padding"
            android:paddingRight="@dimen/edit_text_horizontal_padding"
            android:layout_marginTop="@dimen/register_view_margin_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <RelativeLayout
            android:id="@+id/relative_term_condition"
            android:layout_marginTop="@dimen/register_view_margin_top"
            android:layout_below="@+id/edit_conf_password"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/checkbox_terms_condition"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_term_condition"
                android:layout_toRightOf="@+id/checkbox_terms_condition"
                android:layout_centerVertical="true"
                android:padding="@dimen/text_forgot_password_padding"
                android:text="@string/term_condition"
                android:textColor="@color/grey600"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
    <include layout="@layout/footer_action_layout"/>
</RelativeLayout>
